--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@
   .navbar{
       display: flex;
       justify-content: end;
-      font-family: 'Roboto', sans-serif;
+      font-family: arial,sans-serif;
   }
 
   .nav-list{
@@ -254,8 +254,13 @@
       padding-top: 3px !important;
       margin: 5px;
       padding: 5px;
-      font-size: 14px;
-      color: black;
+      font-size: 13px;
+      color: rgb(61, 61, 61);
+  }
+
+  #nav-item-icon{
+    margin-top: 2px !important;
+    padding-top: 0px !important;
   }
 
   .navbar .nav-list .nav-item a{
@@ -401,8 +406,10 @@
 
   .footer-txt{
     text-decoration: none;
-    color: black;
+    color: #70757a;
     margin: 15px;
+    font-family: arial,sans-serif;
+    font-size: 14px;
   }
 
   .footer-2-left{
@@ -412,4 +419,8 @@
   .footer-2-right{
     margin: auto;
     margin-right: 0;
+  }
+
+  .footer-2 a:hover{
+    text-decoration: underline 1px solid black;
   }
