--- a/style.css
+++ b/style.css
@@ -240,6 +240,7 @@
   .navbar{
       display: flex;
       justify-content: end;
+      margin:auto;
       font-family: arial,sans-serif;
   }
 
@@ -273,7 +274,7 @@
   }
 
   .nav-div{
-      width: 21%;
+      width: 325px;
   }
 
   #signin-btn a{
