--- a/style.css
+++ b/style.css
@@ -238,10 +238,10 @@
   }
 
   .navbar{
-      display: flex;
-      justify-content: end;
-      /* margin:auto; */
       font-family: arial,sans-serif;
+      position:fixed;
+      top: 0;
+      right: 0;
   }
 
   .nav-list{
@@ -291,8 +291,9 @@
 
   .body{
     width: auto;
-      height: 548px;
+    margin-top:100px;
   }
+
   .google-logo{
     display: flex;
     justify-content: center;
@@ -392,6 +393,13 @@
 
   .offers a:hover{
     text-decoration:underline 1px solid rgb(2, 2, 209);
+  }
+
+  .footer{
+    position:fixed;
+    left:0;
+    bottom:0;
+    width:100%;
   }
 
   .footer-1{
